fixed the z-index issue causing the menu burger to be hidden on Safari.

--- a/src/components/menu-toggle/menu-toggle.module.css
+++ b/src/components/menu-toggle/menu-toggle.module.css
@@ -13,7 +13,7 @@
 
 .mobileNavButton :global .menu_svg__line {
   transform: translateY(0) rotate(0deg);
-  fill: var(--text);
+  fill: var(--text) !important;
   transition: all 0.3s ease-in-out;
   opacity: 1;
 }
